src/test/ui/consts/const-eval/panic-never-type.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/panic-never-type.rs:5:17
   |
LL | const VOID: ! = panic!();
   |                 ^^^^^^^^ the evaluated program panicked at 'explicit panic', $DIR/panic-never-type.rs:5:17
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
